frontend/test/should_pass/exec_012.grg
rule r : (Node) {
  modify{
    y : Node;
    exec( (z:Node)=r && r );
    return (y);
  }
}
