frontend/test/should_fail/exec_031.grg
rule r {
  y --> y;
  modify{
    exec( (y:Node)=r ); // y cannot leave exec scope
  }
}
